fix (接口测试): 修复大批量执行含自定义脚本和CSV文件导致请求阻塞问题